<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sergio.es.empleados.NuevoEmpleadoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblTextoNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/intro_nombre"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nombre"
            android:lines="2"
            android:maxLines="5"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/lblTextoCargo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/intro_cargo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtCargo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_cargo"
            android:lines="2"
            android:maxLines="5"
            android:padding="10dp" />

        <TextView
            android:id="@+id/lblTextoTelefono"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/intro_telefono"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_telefono"
            android:lines="2"
            android:maxLines="5"
            android:padding="10dp" />

        <TextView
            android:id="@+id/lblTextoCorreo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/intro_correo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_correo"
            android:lines="2"
            android:maxLines="5"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/btnAnadir"/>

    </LinearLayout>

</ScrollView>
